syntax = "proto3";

option go_package = "03-server-stream/proto";

package proto;

// 定义服务
service StreamServer {
  // 服务端流式rpc
  rpc ListValue (SimpleRequest) returns (stream StreamResponse) {}
}

// 定义请求消息
message SimpleRequest {
  string data = 1;
}

// 定义响应消息
message StreamResponse {
  string value = 1;
}
